@@ -9,7 +9,8 @@ import java.util.logging.Level;
 import java.util.logging.Logger;
 
 public class DTxnCache {
-    private static List<Integer> epochQueue = new LinkedList<>();
+    private static LinkedList<Integer> epochQueue = new LinkedList<>();
+    private static TreeSet<Integer> completedEpochs = new TreeSet<>();
     private static Map<Integer, CacheKeeper> txnCache = new ConcurrentHashMap<>();
 
     public static final Logger logger = Logger.getLogger(DTxnCache.class.getName());
@@ -20,16 +21,23 @@ public class DTxnCache {
 
     public static Collection<Bzs.Transaction> getCommittedTransactions() {
         Set<Bzs.Transaction> committedTxns = new LinkedHashSet<>();
-        if (epochQueue.size()>0) {
-            Integer head = epochQueue.get(0);
-            if (head!=null) {
+        if (epochQueue.size() > 0) {
+            Integer head = epochQueue.getFirst();
+            if (head != null) {
                 CacheKeeper cache = txnCache.get(head);
-                if(cache.allCompleted()) {
+                if (cache.allCompleted()) {
+                    epochQueue.removeFirst();
                     return cache.getCompletedTxns();
                 }
             }
         }
         return committedTxns;
+    }
+
+    public static boolean completedDRWTxnsExist() {
+        boolean status;
+        status = completedEpochs.size() > 0 && completedEpochs.contains(epochQueue.getFirst());
+        return status;
     }
 
     public static void addToInProgressQueue(final Integer epochNumber,
@@ -48,8 +56,12 @@ public class DTxnCache {
             logger.log(Level.WARNING, String.format("No transactions available for epoch: %d.", epochNumber.intValue()));
             return;
         }
+
         CacheKeeper cache = txnCache.get(epochNumber);
         cache.addToCompleted(completed);
+        if (cache.allCompleted()) {
+            completedEpochs.add(epochNumber);
+        }
 
     }
 
@@ -82,7 +94,7 @@ class CacheKeeper {
     }
 
     public boolean allCompleted() {
-        return inProgressTxnMap.size()==0;
+        return inProgressTxnMap.size() == 0;
     }
 
     public Set<Bzs.Transaction> getCompletedTxns() {
